@@ -36,7 +36,7 @@ sub add_methods {
 			$module_name = $planner->main_module;
 			$xs_file = catfile($xs_base, split /::/, $module_name) . '.xs';
 		}
-		my $module_version = $args{version} // $planner->dist_version;
+		my $module_version = $args{version} // $planner->distribution_version;
 
 		$planner = $planner->new_scope;
 
