@@ -3,6 +3,7 @@ Revision history for Dist-Build
 {{$NEXT}}
           - Rename main_module_name to main_module
           - Add default module to module_sharedir in Dist::Build::ShareDir
+          - Rename the dist_name delegate to distribution
 
 0.015     2024-09-20 14:07:03+02:00 Europe/Brussels
           - Add Dist::Build::XS::Alien
